--- a/src/less/_entry.less
+++ b/src/less/_entry.less
@@ -19,10 +19,11 @@
 		text-align: center;vertical-align: middle;line-height:42px;
 		span{font-family: "微软雅黑";}
 	}
+	#submit:hover{.x-pic; .x-pic-entry-btn-hover;}
 
 	.footer{
 		width: 100%; height: 56px; position: fixed; bottom: 0; z-index: 2; text-align: center;.x-bg-h_56_entry;
-		.footer-bar {display:block;height:56px;width:274px;margin:0 auto; .x-logo; .x-logo-entry-foot;}
+		.footer-bar {display:block;height:56px;width:360px;margin:0 auto; .x-logo; .x-logo-entry-foot;}
 	}
 	.focus{.x-pic;.x-pic-entry-input-hover;
 		.pic-user{.x-pic;.x-pic-entry-account-hover;}
