--- a/src/less/_sys.less
+++ b/src/less/_sys.less
@@ -45,7 +45,7 @@
 	.btn-syncTiming:hover {.x-pic-btn-sync-timing-hover;}
 	.line{width: 445px;height: 1px;border-bottom: 1px solid #cdd1d5;margin-left: 105px;}
 	.nv-radio {
-		display:inline-block; margin:0px 0 0px 29px;
+		display:inline-block; /* margin:0px 0 0px 29px; */
 		.ixpic-{margin:1.5px 15px 0 0;}
 		span{vertical-align: top;}
 		&.selected{.ixpic-.radioSite{.x-pic;.x-pic-radio-checked;}}
@@ -83,6 +83,7 @@
 .sys-editUser {
 	.isAdmin .role {display:none;}
 	.pwd {display:none;}
+	#user_type{background-color: #fff; color: #d0d0d0; border: 1px solid #d6d6d6; box-shadow: none;}
 }
 .sys-createUser .pwd {display:block;}
 
