--- a/src/less/nvlib.less
+++ b/src/less/nvlib.less
@@ -118,15 +118,15 @@
 }
 
 #IXW-alert>div.ixw-alert{border: 1px solid #fff;}
-.ixw-bg{opacity: 0.4;}
+.ixw-bg{opacity: 0.5;}
 .ixw-close{opacity: 1;
 	a{color: #fff;}
 }
 .ixw-close:hover{opacity: 0.6;}
 .content{opacity: 1; color: #fff;}
 .animate-shake{.x-shake;}
-.ixw-info{border: 1px solid #5edbff;
-	.content{color: #5edbff;}
+.ixw-info{border: 1px solid #fff;
+	.content{color: #fff;}
 }
 
 #IXW-alert .ixw-confirm{
