--- a/src/less/uilib.less
+++ b/src/less/uilib.less
@@ -25,6 +25,8 @@
 
 .act-edit{.x-pic-ico-edit;}
 .act-edit:hover{background-color:#3eb6e3;border-radius:2px;}
+.act-reset{.x-pic-ico-reset;}
+.act-reset:hover{background-color:#3eb6e3;border-radius:2px;}
 .act-delete{.x-pic-ico-delete;}
 .act-delete:hover{background-color:#3eb6e3;border-radius:2px;}
 
