--- a/src/less/map.less
+++ b/src/less/map.less
@@ -1,7 +1,7 @@
 #Grid.showMap{
 	overflow: hidden; position: fixed; top: 70px; bottom: 34px; left: 280px; right: 20px;border-radius: 5px; margin: 10px 0 0 10px;
 	.nv-grid{margin: 0;}
-	.nvgrid-body{min-height:920px;}
+	.nvgrid-body{min-height: 500px;}
 }
 #mask{position: fixed; top: 0; left: 0; right: 0; bottom: 0; z-index: 50000;}
 #updateFile{
@@ -16,7 +16,7 @@
 	.shrink:hover{.x-pic; .x-pic-shrinkMap-hover;}
 }
 .suspend{
-	cursor: pointer; z-index: 200; position: absolute; right: 60px; bottom: 60px;
+	cursor: pointer; z-index: 200; position: absolute; right: 40px; bottom: 40px;
 	.showContent{width: 360px; box-shadow: none; border-bottom-right-radius: 0px; border-bottom-left-radius: 0px;}
 }
 .notCameras{ 
@@ -37,11 +37,12 @@
 		.item{float: left; width: 150px; font-size: 12px; margin: 3px 0;}
 	}
 	.hint{padding: 10px; color: #5b7f92;font-size:12px; height: 35px; display: inline-block; background: #fff; width: 100%;}
+	.name{width: 80px; text-overflow:ellipsis; overflow: hidden;}
 }
 #imgFrame{overflow: hidden; position: relative; margin-top: 10px;}
 .fix{position: relative; cursor: pointer;}
 .cameraOne{
-	position: absolute; width: 28px; height: 28px; border-radius: 50%; z-index: 10;
+	position: absolute; width: 28px; height: 28px; border-radius: 50%; z-index: 10; margin: -14px 0 0 -14px;
 	.delete{.x-pic;.x-pic-zone-delete; width: 18px; height: 18px; top: -8px; left: 25px;}
 	.name{
 		top: 30px; left: 15px; white-space:nowrap; border: 1px solid #565656; padding: 2px;
